<resources>
    <string name="app_name">Firestore Project</string>
    <string name="edit_text_hint_title">Title</string>
    <string name="edit_text_hint_description">Description</string>
    <string name="button_add_text">Add</string>
    <string name="button_load">Load</string>
    <string name="update_title_button">Update title</string>
    <string name="delete_description">Delete description</string>
    <string name="delete_note">Delete note</string>
    <string name="edit_text_tags">Add tags</string>
    <string name="priority">Priority</string>
</resources>