<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_hint_title"/>

    <EditText android:id="@+id/edit_text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_hint_description"/>

    <Button android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save_text"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/load_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_load"/>
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_update_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_title_button"/>
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_delete_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_description"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_delete_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_note"/>

    <TextView android:id="@+id/text_view_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"/>

</androidx.appcompat.widget.LinearLayoutCompat>